@@ -128,6 +128,7 @@ class ProjectsController < ApplicationController
   def project_params
     params.require(:project).permit(:path, :timeout, :timeout_in_minutes, :default_ref, :always_build,
       :polling_interval, :public, :ssh_url_to_repo, :allow_git_fetch, :email_recipients,
-      :email_add_pusher, :email_only_broken_builds, :coverage_regex, :shared_runners_enabled, :token)
+      :email_add_pusher, :email_only_broken_builds, :coverage_regex, :shared_runners_enabled, :token,
+      { variables_attributes: [:id, :key, :value, :_destroy] })
   end
 end
