@@ -33,12 +33,15 @@ class Project < ActiveRecord::Base
   has_many :runners, through: :runner_projects
   has_many :web_hooks, dependent: :destroy
   has_many :events, dependent: :destroy
+  has_many :variables, dependent: :destroy
 
   # Project services
   has_many :services, dependent: :destroy
   has_one :hip_chat_service, dependent: :destroy
   has_one :slack_service, dependent: :destroy
   has_one :mail_service, dependent: :destroy
+
+  accepts_nested_attributes_for :variables, allow_destroy: true
 
   #
   # Validations
