@@ -1,0 +1,3 @@
+class Variable < ActiveRecord::Base
+  belongs_to :project
+end
