@@ -1,0 +1,32 @@
+%p.slead
+  Define additional environment variables which will be used by runner
+
+
+= nested_form_for @project, html: { class: 'form-horizontal' } do |f|
+  - if @project.errors.any?
+    #error_explanation
+      %p.lead= "#{pluralize(@project.errors.count, "error")} prohibited this project from being saved:"
+      .alert.alert-error
+        %ul
+          - @project.errors.full_messages.each do |msg|
+            %li= msg
+
+  = f.fields_for :variables do |variable_form|
+    .form-group
+      = f.label :key, 'Key', class: 'control-label'
+      .col-sm-10
+        = variable_form.text_field :key, class: 'form-control', placeholder: "PROJECT_VARIABLE"
+
+    .form-group
+      = f.label :commands, 'Value', class: 'control-label'
+      .col-sm-10
+        = variable_form.text_area :value, class: 'form-control', rows: 2, placeholder: ""
+
+        = variable_form.link_to_remove "Remove this variable", class: 'btn btn-danger pull-right prepend-top-10'
+    %hr
+  %p
+    .clearfix
+      = f.link_to_add "Add a variable", :variables, class: 'btn btn-success pull-right'
+
+  .form-actions
+    = f.submit 'Save changes', class: 'btn btn-save', return_to: request.original_url
