@@ -11,7 +11,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 20150602000240) do
+ActiveRecord::Schema.define(version: 20150605002131) do
 
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
@@ -171,6 +171,14 @@ ActiveRecord::Schema.define(version: 20150602000240) do
   end
 
   add_index "tags", ["name"], name: "index_tags_on_name", unique: true, using: :btree
+
+  create_table "variables", force: true do |t|
+    t.integer "project_id", null: false
+    t.string  "key"
+    t.text    "value"
+  end
+
+  add_index "variables", ["project_id"], name: "index_variables_on_project_id", using: :btree
 
   create_table "web_hooks", force: true do |t|
     t.string   "url",        null: false
